fix: fix bug where `ContentWithBento` would not switch to single-column layout on small screens

--- a/src/styles/shared/ContentWithBento.css
+++ b/src/styles/shared/ContentWithBento.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 1000px) {
 	.col-bento-container {
-		flex-direction: column;
+		grid-template-columns: auto;
 		gap: 2rem;
 	}
 }
